--- a/countdownprogresslib/build.gradle
+++ b/countdownprogresslib/build.gradle
@@ -1,18 +1,41 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
+    id 'maven-publish'
+}
+
+afterEvaluate {
+    publishing {
+        publications{
+            // release
+            release(MavenPublication){
+                from components.release
+
+                groupId = 'kr.co.zetta.countdownprogresslib'
+                artifactId = 'alpha'
+                version = '0.0.1'
+            }
+
+            // debug
+            debug(MavenPublication){
+                from components.debug
+
+                groupId = 'kr.co.zetta.countdownproresslib'
+                artifactId = 'alpha-debug'
+                version = '0.0.1'
+            }
+        }
+    }
 }
 
 android {
     compileSdk 30
 
     defaultConfig {
-        applicationId "kr.co.zetta.countdownprogress"
         minSdk 19
         targetSdk 30
-        versionCode 1
-        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -28,12 +51,9 @@ android {
 }
 
 dependencies {
+
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-
-    implementation project (":countdownprogresslib")
-
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
